Updated Mahesh's corporate affiliation.

--- a/drafts/draft-ietf-bfd-yang-16.html
+++ b/drafts/draft-ietf-bfd-yang-16.html
@@ -481,7 +481,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right"></td>
+<td class="right">Xoriant Corporation</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -3813,15 +3813,16 @@ module example-bfd-echo {
 		<span class="family-name">Jethanandani</span>
 	  </span>
 	</span>
-	<span class="org vcardline"></span>
+	<span class="org vcardline">Xoriant Corporation</span>
 	<span class="adr">
-	  
+	  <span class="vcardline">1248 Reamwood Ave</span>
+
 	  <span class="vcardline">
-		<span class="locality"></span> 
-		<span class="region"></span>
-		<span class="code"></span>
+		<span class="locality">Sunnyvale</span>,  
+		<span class="region">California</span> 
+		<span class="code">94089</span>
 	  </span>
-	  <span class="country-name vcardline"></span>
+	  <span class="country-name vcardline">USA</span>
 	</span>
 	<span class="vcardline">EMail: <a href="mailto:mjethanandani@gmail.com">mjethanandani@gmail.com</a></span>
 
